--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,3 +22,58 @@ services:
       - ./configs/postgres/postgresql.conf:/etc/postgresql/postgresql.conf
       - ./scripts/inventory.sql:/docker-entrypoint-initdb.d/inventory.sql
       - ./.docker/postgres:/var/lib/postgresql/data
+
+  localstack:
+    image: localstack/localstack:3.3.0
+    restart: always
+    container_name: localstack
+    hostname: localstack
+    ports:
+      - 4567:4566
+      - '4610-4659:4510-4559'
+    environment:
+      - HOSTNAME_EXTERNAL=localstack
+      - LOCALSTACK_HOSTNAME=localstack
+      - DEBUG=0
+      - DOCKER_HOST=unix:///var/run/docker.sock
+      - PERSISTENCE=1
+      - AWS_DEFAULT_REGION=us-east-1
+      - AWS_ACCESS_KEY_ID=foo
+      - AWS_SECRET_ACCESS_KEY=bar
+    healthcheck:
+      test: >-
+        curl -s localhost:4566/_localstack/init/ready | grep -q '\"completed\": true'
+      interval: 10s
+      timeout: 5s
+      start_period: 1m
+      retries: 5
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - ./.docker/localstack:/var/lib/localstack
+  
+  debezium:
+    image: quay.io/debezium/server:2.5.3.Final
+    restart: always
+    container_name: debezium
+    hostname: debezium
+    depends_on:
+      postgres:
+        condition: service_healthy
+      localstack:
+        condition: service_healthy
+    ports:
+      - 8083:8080
+    environment:
+      - AWS_ENDPOINT_URL=http://localstack:4566
+      - AWS_DEFAULT_REGION=us-east-1
+      - AWS_ACCESS_KEY_ID=foo
+      - AWS_SECRET_ACCESS_KEY=bar
+    healthcheck:
+      test: >-
+        curl -s localhost:8080/q/health | grep -q '\"status\": \"UP\"'
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    volumes:
+      - ./.docker/debezium:/debezium/data
+      - ./configs/debezium:/debezium/conf
