--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,6 +53,7 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./.docker/localstack:/var/lib/localstack
+      - ./scripts/localstack-eventbridge-buses.sh:/etc/localstack/init/ready.d/localstack-eventbridge-buses.sh
       - ./scripts/localstack-kinesis-streams.sh:/etc/localstack/init/ready.d/localstack-kinesis-streams.sh
 
   debezium:
