--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -87,3 +87,21 @@ services:
     volumes:
       - ./.docker/debezium:/debezium/data
       - ./configs/debezium:/debezium/conf
+
+  sqs-consumer:
+    build:
+      context: ./sqs_consumer
+      dockerfile: Dockerfile
+    container_name: sqs-consumer
+    restart: on-failure
+    environment:
+      - AWS_ENDPOINT_URL=http://localstack:4566
+      - AWS_DEFAULT_REGION=us-east-1
+      - AWS_ACCESS_KEY_ID=foo
+      - AWS_SECRET_ACCESS_KEY=bar
+      - SQS_QUEUE_URL=http://localstack:4566/queue/us-east-1/000000000000/data-change.fifo
+    volumes:
+      - ./sqs_consumer:/app
+    depends_on:
+      localstack:
+        condition: service_healthy
